======================

    --architecture-- Makefile.am's for /krusader and /pics revised

    ADDED: Serbian translation (thanks Sasa Tomic)
    ADDED: Brazilian Portuguese translation (thanks Doutor Zero)
    ADDED: colorful synchronizer :-)
    ADDED: starting more tabs with --left=tab1,tab2,tab3 --right=tab4,tab5
    ADDED: vertical mode is saved with 'ui save settings' or 'save position' and restored
    ADDED: A Safari-like Jump-Back feature (Ctrl-J and in the bookmark-menu)
    ADDED: CTRL-L shortcut to go to the location bar (origin) as in firefox and konqueror
    ADDED: filters for selecting files
    ADDED: New zip/tar slave - based on KDE's but support writing to archive

  CHANGED: the panel startup is profile based instead of directory based

    FIXED: changing the 'show hidden files' sets the active tab to right, untouches the inactive ones
    FIXED: the  default value of moving to trash is wrong in Konfigurator
    FIXED: problems with moving to trash at virt_fs and diskusage module
    FIXED: gcc 2.95 compiler fix
    FIXED: changed locate-gui shortcut from ctrl-l to shift+ctrl+l
    FIXED: bookmark icons were not saved correctly
    FIXED: clicking a search result won't jump to it, if it's in the current directory (patch by Thomas Jarosch)

  UPDATED: Polish translation (thanks Pawel Salawa)
  UPDATED: Slovenian translation (thanks Matej Urbancic)
  UPDATED: German translation


1.60.0
======================
    ADDED: New Gorilla-style icon by www.OnExige.com

    FIXED: Crash if the useractions.xml contains invalid data
    FIXED: quick selection doesn't work
    FIXED: synchronizer, content filter doesn't work
    FIXED: synchronizer, consistency bug of the filter combos
    FIXED: advanced filter hides the searcher window at errors
    FIXED: combiner, smoother interoperability with Total Commander
    FIXED: UserActionMenu gets updated after Konfigurator applys
    FIXED: can't sort by extension when "Case Sensitive sort" is on