@@ -4,6 +4,8 @@
 
     ADDED: Serbian translation (thanks Sasa Tomic)
     ADDED: Brazilian Portuguese translation (thanks Doutor Zero)
+
+    ADDED: synchronize selected files
     ADDED: colorful synchronizer :-)
     ADDED: starting more tabs with --left=tab1,tab2,tab3 --right=tab4,tab5
     ADDED: vertical mode is saved with 'ui save settings' or 'save position' and restored
